--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -109,6 +109,17 @@
         </figure>
     </template>
 
+
+    <h3>Eventos en Javascript</h3>
+    <h4>Manejadores de Eventos</h4>
+
+    <button onclick="holaMundo()">Evento con atributo HTML</button>
+    <br><br>
+    <button id="evento-semantico">Evento con Manejador Semantico</button>
+    <br><br>
+    <button id="evento-multiple">Evento con Manejador multiple</button>
+
+
     <script src="js/dom.js">
     </script>
 </body>
