--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -151,6 +151,8 @@
             </div>
         </div>
     </section>
+    <br>
+    <h3 style="width:2000px;">Manejo del BOM</h3>
 
     <script src="js/dom.js">
     </script>
