--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -153,6 +153,11 @@
     </section>
     <br>
     <h3 style="width:2000px;">Manejo del BOM</h3>
+    <button id="abrir-ventana">Abrir Ventana</button>
+    <br><br>
+    <button id="cerrar-ventana">Cerrar Ventana</button>
+    <br><br>
+    <button id="imprimir-ventana">Imprimir Ventana</button>
 
     <script src="js/dom.js">
     </script>
