--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -26,7 +26,7 @@
     <aside class="panel">
       <nav class="menu">
         <a href="#seccion1">Reloj Digital y Alrma Sonora </a>
-        <a href="#seccion2" >Seccion 2 </a
+        <a href="#seccion2" >Eventos del Teclado </a
         ><a href="#seccion3" >Seccion 3</a
         ><a href="#seccion4" >Seccion 4</a
         ><a href="#seccion5" >Seccion 5</a>
@@ -43,10 +43,16 @@
               <button id="desactivar-reloj">Detener Reloj</button>
               <button id="activar-alarma">Iniciar Alarma</button>
               <button id="desactivar-alarma">Detener Alarma</button>
+              <!--<audio src="../assets/alarma-carro.mp3" controls></audio>-->
             </div>
         </section>
         <section id="seccion2" class="section">
-            <h2>Seccion 2</h2>
+            <h2>Eventos del Teclado</h2>
+            <article class="stage">
+              <div class="ball">
+                
+              </div>
+            </article>
         </section>
         <section id="seccion3" class="section">
             <h2>Seccion 3</h2>
