--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -27,7 +27,7 @@
       <nav class="menu">
         <a href="#seccion1">Reloj Digital y Alrma Sonora </a>
         <a href="#seccion2" >Eventos del Teclado </a
-        ><a href="#seccion3" >Seccion 3</a
+        ><a href="#seccion3" >CUenta Regresiva</a
         ><a href="#seccion4" >Seccion 4</a
         ><a href="#seccion5" >Seccion 5</a>
       </nav>
@@ -55,7 +55,10 @@
             </article>
         </section>
         <section id="seccion3" class="section">
-            <h2>Seccion 3</h2>
+            <h2>Cuenta Regresiva</h2>
+            <div id="countdown">
+
+            </div>
         </section>
         <section id="seccion4" class="section">
             <h2>Seccion 4</h2>
@@ -65,6 +68,7 @@
         </section>
     </main>
 
+    <button class="scroll-top-btn hidden">&#11014</button>
     <script src="js/index_dom.js" type="module"></script>
   </body>
 </html>
