--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -28,8 +28,8 @@
         <a href="#seccion1">Reloj Digital y Alrma Sonora </a>
         <a href="#seccion2" >Eventos del Teclado </a
         ><a href="#seccion3" >CUenta Regresiva</a
-        ><a href="#seccion4" >Seccion 4</a
-        ><a href="#seccion5" >Seccion 5</a>
+        ><a href="#seccion4" >Responsive con JS</a
+        ><a href="#seccion5" >Responsive tester</a>
       </nav>
     </aside>
     <main>
@@ -61,10 +61,23 @@
             </div>
         </section>
         <section id="seccion4" class="section">
-            <h2>Seccion 4</h2>
+            <h2>Responsive con JS</h2>
+            <div id="youtube">
+            </div>
+            <div id="gmaps"></div>
         </section>
         <section id="seccion5" class="section">
-            <h2>Seccion 5</h2>
+            <h2>Responsive Tester</h2>
+            <form id="responsive-tester">
+              <input name="direccion" type="url" placeholder="URL" required>
+              <br>
+              <input name="ancho" type="text" placeholder="Ancho" required>
+              <br>
+              <input name="alto" type="text" placeholder="Alto" required>
+              <br>
+              <input type="submit" name="probar" value="probar">
+              <input type="button" name="cerrar" value="cerrar">
+            </form>
         </section>
     </main>
 
