--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -30,6 +30,7 @@
         ><a href="#seccion3" >CUenta Regresiva</a
         ><a href="#seccion4" >Responsive con JS</a
         ><a href="#seccion5" >Responsive tester</a>
+        <a href="#seccion6" >Deteccion de dispositivos (User Agent)</a>
       </nav>
     </aside>
     <main>
@@ -78,6 +79,12 @@
               <input type="submit" name="probar" value="probar">
               <input type="button" name="cerrar" value="cerrar">
             </form>
+        </section>
+        <section id="seccion6" class="section">
+          <h2>Deteccion de dispositivos (User Agent)</h2>
+          <div id="user-device">
+            
+          </div>
         </section>
     </main>
 
