--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -31,6 +31,8 @@
         ><a href="#seccion4" >Responsive con JS</a
         ><a href="#seccion5" >Responsive tester</a>
         <a href="#seccion6" >Deteccion de dispositivos (User Agent)</a>
+        <a href="#seccion7" >Deteccion de la conexion</a>
+        <a href="#seccion8" >Deteccion de la camara web</a>
       </nav>
     </aside>
     <main>
@@ -83,8 +85,15 @@
         <section id="seccion6" class="section">
           <h2>Deteccion de dispositivos (User Agent)</h2>
           <div id="user-device">
-            
           </div>
+        </section>
+        <section id="seccion7" class="section">
+          <h2>Deteccion de la conexion</h2>
+          
+        </section>
+        <section id="seccion8" class="section">
+          <h2>Deteccion de la camara web</h2>
+          <video id="webcam" controls></video>
         </section>
     </main>
 
