--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -33,6 +33,7 @@
         <a href="#seccion6" >Deteccion de dispositivos (User Agent)</a>
         <a href="#seccion7" >Deteccion de la conexion</a>
         <a href="#seccion8" >Deteccion de la camara web</a>
+        <a href="#seccion9" >Geolocalizacion</a>
       </nav>
     </aside>
     <main>
@@ -94,6 +95,12 @@
         <section id="seccion8" class="section">
           <h2>Deteccion de la camara web</h2>
           <video id="webcam" controls></video>
+        </section>
+        <section id="seccion9" class="section">
+          <h2>Geolocalizacion</h2>
+          <div id="geolocation">
+            
+          </div>
         </section>
     </main>
 
