--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -34,6 +34,8 @@
         <a href="#seccion7" >Deteccion de la conexion</a>
         <a href="#seccion8" >Deteccion de la camara web</a>
         <a href="#seccion9" >Geolocalizacion</a>
+        <a href="#seccion10" >Filtros de busqueda</a>
+        <a href="#seccion11" >Sorteo digital</a>
       </nav>
     </aside>
     <main>
@@ -101,6 +103,52 @@
           <div id="geolocation">
             
           </div>
+        </section>
+        <section id="seccion10" class="section" >
+          <h2>Filtros de busqueda</h2>
+          <input type="search" placeholder="Buscar" class="card-filter">
+          <article class="cards" >
+            <figure class="card" >
+                <img src="https://placeimg.com/200/200/animals" alt="animals">
+                <figcaption  >Animals</figcaption>
+            </figure>
+            <figure class="card">
+                <img src="https://placeimg.com/200/200/tech" alt="tech">
+                <figcaption>Tech</figcaption>
+            </figure>
+            <figure class="card">
+                <img src="https://placeimg.com/200/200/people" alt="people">
+                <figcaption>People</figcaption>
+            </figure>
+            <figure class="card">
+                <img src="https://placeimg.com/200/200/arch" alt="Arch">
+                <figcaption>Arch</figcaption>
+            </figure>
+            <figure class="card">
+                <img src="https://placeimg.com/200/200/nature" alt="Nature">
+                <figcaption>Nature</figcaption>
+            </figure>
+            <figure class="card">
+              <img src="https://placeimg.com/200/200/any" alt="Any">
+              <figcaption>Any</figcaption>
+          </figure>
+          </article>  
+        </section>
+        <section id="seccion11" class="section">
+          <h2>Sorteo digital</h2>
+          <ul class="players">
+            <li class="player">Javascript</li>
+            <li class="player">Python</li>
+            <li class="player">PHP</li>
+            <li class="player">C</li>
+            <li class="player">perl</li>
+            <li class="player">Java</li>
+            <li class="player">C#</li>
+            <li class="player">Rust</li>
+            <li class="player">C#</li>
+            <li class="player">React</li>
+          </ul>
+          <button id="winner-btn">Obtener Ganador</button>
         </section>
     </main>
 
