--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -25,21 +25,22 @@
     </button>
     <aside class="panel">
       <nav class="menu">
-        <a href="#seccion1">Reloj Digital y Alrma Sonora </a>
-        <a href="#seccion2" >Eventos del Teclado </a
-        ><a href="#seccion3" >CUenta Regresiva</a
-        ><a href="#seccion4" >Responsive con JS</a
-        ><a href="#seccion5" >Responsive tester</a>
-        <a href="#seccion6" >Deteccion de dispositivos (User Agent)</a>
-        <a href="#seccion7" >Deteccion de la conexion</a>
-        <a href="#seccion8" >Deteccion de la camara web</a>
-        <a href="#seccion9" >Geolocalizacion</a>
-        <a href="#seccion10" >Filtros de busqueda</a>
-        <a href="#seccion11" >Sorteo digital</a>
+        <a href="#seccion1" data-scroll-spy >Reloj Digital y Alrma Sonora </a>
+        <a href="#seccion2" data-scroll-spy >Eventos del Teclado </a
+        ><a href="#seccion3" data-scroll-spy >CUenta Regresiva</a
+        ><a href="#seccion4" data-scroll-spy >Responsive con JS</a
+        ><a href="#seccion5" data-scroll-spy >Responsive tester</a>
+        <a href="#seccion6" data-scroll-spy >Deteccion de dispositivos (User Agent)</a>
+        <a href="#seccion7" data-scroll-spy >Deteccion de la conexion</a>
+        <a href="#seccion8" data-scroll-spy >Deteccion de la camara web</a>
+        <a href="#seccion9" data-scroll-spy >Geolocalizacion</a>
+        <a href="#seccion10" data-scroll-spy >Filtros de busqueda</a>
+        <a href="#seccion11" data-scroll-spy >Sorteo digital</a>
+        <a href="#seccion12" data-scroll-spy >Responsive Slider</a>
       </nav>
     </aside>
     <main>
-        <section id="seccion1" class="section">
+        <section id="seccion1" class="section" data-scroll-spy>
             <h2>Reloj Digital y Alrma Sonora</h2>
             <div id="reloj">
 
@@ -52,7 +53,7 @@
               <!--<audio src="../assets/alarma-carro.mp3" controls></audio>-->
             </div>
         </section>
-        <section id="seccion2" class="section">
+        <section id="seccion2" class="section" data-scroll-spy>
             <h2>Eventos del Teclado</h2>
             <article class="stage">
               <div class="ball">
@@ -60,19 +61,19 @@
               </div>
             </article>
         </section>
-        <section id="seccion3" class="section">
+        <section id="seccion3" class="section" data-scroll-spy>
             <h2>Cuenta Regresiva</h2>
             <div id="countdown">
 
             </div>
         </section>
-        <section id="seccion4" class="section">
+        <section id="seccion4" class="section" data-scroll-spy>
             <h2>Responsive con JS</h2>
             <div id="youtube">
             </div>
             <div id="gmaps"></div>
         </section>
-        <section id="seccion5" class="section">
+        <section id="seccion5" class="section" data-scroll-spy>
             <h2>Responsive Tester</h2>
             <form id="responsive-tester">
               <input name="direccion" type="url" placeholder="URL" required>
@@ -85,26 +86,26 @@
               <input type="button" name="cerrar" value="cerrar">
             </form>
         </section>
-        <section id="seccion6" class="section">
+        <section id="seccion6" class="section" data-scroll-spy>
           <h2>Deteccion de dispositivos (User Agent)</h2>
           <div id="user-device">
           </div>
         </section>
-        <section id="seccion7" class="section">
+        <section id="seccion7" class="section" data-scroll-spy>
           <h2>Deteccion de la conexion</h2>
           
         </section>
-        <section id="seccion8" class="section">
+        <section id="seccion8" class="section" data-scroll-spy>
           <h2>Deteccion de la camara web</h2>
           <video id="webcam" controls></video>
         </section>
-        <section id="seccion9" class="section">
+        <section id="seccion9" class="section" data-scroll-spy>
           <h2>Geolocalizacion</h2>
           <div id="geolocation">
             
           </div>
         </section>
-        <section id="seccion10" class="section" >
+        <section id="seccion10" class="section" data-scroll-spy >
           <h2>Filtros de busqueda</h2>
           <input type="search" placeholder="Buscar" class="card-filter">
           <article class="cards" >
@@ -134,7 +135,7 @@
           </figure>
           </article>  
         </section>
-        <section id="seccion11" class="section">
+        <section id="seccion11" class="section" data-scroll-spy>
           <h2>Sorteo digital</h2>
           <ul class="players">
             <li class="player">Javascript</li>
@@ -150,8 +151,38 @@
           </ul>
           <button id="winner-btn">Obtener Ganador</button>
         </section>
+        <section id="seccion12" class="section" data-scroll-spy>
+          <h2>Responsive slider</h2>
+          <div class="slider">
+            <div class="slider-slides">
+              <div class="slider-slide active">
+                <img src="https://placeimg.com/400/400/animals" alt="animals">
+              </div>
+              <div class="slider-slide">
+                <h4>Diapositiva 2</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                  Porro repudiandae voluptas rerum aperiam a accusantium.</p>
+              </div>
+              <div class="slider-slide">
+                <img src="https://placeimg.com/400/400/nature" alt="nature">
+              </div>
+              <div class="slider-slide">
+                <h4>Diapositiva 4</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                  Error eum esse quam nihil dolorem earum, quasi sunt, dolores libero,
+                   ea ratione. Corrupti voluptates explicabo harum qui accusantium ullam 
+                   voluptatibus aliquid.
+                  </p>
+              </div>
+            </div>
+            <div class="slider-btns">
+              <a class="prev" href="#">&laquo;</a>
+              <a class="next" href="#">&raquo;</a>
+            </div>
+          </div>
+        </section>
     </main>
-
+data-scroll-spy 
     <button class="scroll-top-btn hidden">&#11014</button>
     <button class="dark-theme-btn">🌙</button>
 
