--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -37,6 +37,8 @@
         <a href="#seccion10" data-scroll-spy >Filtros de busqueda</a>
         <a href="#seccion11" data-scroll-spy >Sorteo digital</a>
         <a href="#seccion12" data-scroll-spy >Responsive Slider</a>
+        <a href="#seccion13" data-scroll-spy >Video Inteligente</a>
+        <a href="#seccion14" data-scroll-spy >Validacion de formulario</a>
       </nav>
     </aside>
     <main>
@@ -181,8 +183,37 @@
             </div>
           </div>
         </section>
+        <section id="seccion13" class="section" data-scroll-spy>
+          <h2>Video Inteligente</h2>
+          <video src="../assets/Mountains.mp4" muted controls loop data-smart-video></video>
+          <br><br><br><br><br><br><br><br><br><br>
+          <video src="../assets/Seoul.mp4" muted controls loop data-smart-video></video>
+          
+        </section>
+        <section id="seccion14" class="section" data-scroll-spy>
+          <h2>Validacion de Formulario</h2>
+          <form action="" class="contact-form">
+            <legend>Envianos tus comentarios</legend>
+            <input type="text" name="name" placeholder="Escribe tu nombre" 
+            title="El nombre solo acepta lestras y espacios en blanco" 
+            pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
+            <input type="email" name="email" placeholder="Escribe tu email" 
+            title="Email incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+            <input type="text" name="subject" placeholder="Asunto a tratar"
+             title="El asunto es requerido" required>
+             <textarea name="comments" cols="50" rows="5" placeholder="Escribe tus comentarios"
+             data-pattern="^.{1,255}$" required></textarea>
+            <input type="submit">
+            <div class="contact-form-loader none">
+              <img src="../assets/loader.gif" alt="cargando">
+            </div>
+            <div class="contact-form-response none">
+              <p>Los datos han sido enviados</p>
+            </div>
+          </form>
+        </section>
     </main>
-data-scroll-spy 
+
     <button class="scroll-top-btn hidden">&#11014</button>
     <button class="dark-theme-btn">🌙</button>
 
