--- a/DOM/DOM_ejercicios.html
+++ b/DOM/DOM_ejercicios.html
@@ -39,6 +39,7 @@
         <a href="#seccion12" data-scroll-spy >Responsive Slider</a>
         <a href="#seccion13" data-scroll-spy >Video Inteligente</a>
         <a href="#seccion14" data-scroll-spy >Validacion de formulario</a>
+        <a href="#seccion15" data-scroll-spy >Narrador</a>
       </nav>
     </aside>
     <main>
@@ -192,7 +193,7 @@
         </section>
         <section id="seccion14" class="section" data-scroll-spy>
           <h2>Validacion de Formulario</h2>
-          <form action="" class="contact-form">
+          <form action="https://formsubmit.co/diego.gup.75@gmail.com" method="POST" target="_blank" class="contact-form">
             <legend>Envianos tus comentarios</legend>
             <input type="text" name="name" placeholder="Escribe tu nombre" 
             title="El nombre solo acepta lestras y espacios en blanco" 
@@ -212,6 +213,18 @@
             </div>
           </form>
         </section>
+        <section id="seccion15" class="section" data-scroll-spy>
+          <h2>Narrador</h2>
+          <select  id="speech-select">
+            <option value="">--Elige una Voz--</option>
+            </select>
+            <br><br>
+          <textarea id="speech-text" cols="50" rows="10"
+          placeholder="Ingresa texto para leerlo"></textarea>
+          <br><br>
+          <button id="speech-btn">Leer Texto</button>
+        </section>
+        
     </main>
 
     <button class="scroll-top-btn hidden">&#11014</button>
