--- a/AJAX/ajax.html
+++ b/AJAX/ajax.html
@@ -13,9 +13,23 @@
     <h2>Librerias externas</h2>
 
     <br><br><br><br>
+
     <h2>Objeto XMLHttpRequest</h2>
     <ol id="xhr"></ol>
+
+    <h2>API Fetch</h2>
+    <ol id="fetch"></ol>
+
+    <h2>API Fetch + Asyn-Await</h2>
+    <ol id="fetch-async"></ol>
+
+    <h2>Axios</h2>
+    <ol id="axios"></ol>
+
     <br><br><br><br><br><br><br><br><br><br>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/ajax.js"></script>
 </body>
 </html>
