--- a/AJAX/crud_ajax.html
+++ b/AJAX/crud_ajax.html
@@ -109,6 +109,71 @@
     }
 
     d.addEventListener("DOMContentLoaded",getAll);
+
+    d.addEventListener("submit",e=>{
+        if(e.target === $form){
+            e.preventDefault();
+            if(!e.target.id.value){
+                //create-POST
+                ajax({
+                    method:"POST",
+                    url:"http://localhost:3000/santos",
+                    success: (res)=>{
+                        location.reload();
+                    },
+                    error: (err)=>{
+                        $form.insertAdjacentHTML("afterend",`<p><b>${err}</b></p>`);
+                    },
+                    data:{
+                        nombre:e.target.nombre.value,
+                        constelacion:e.target.constelacion.value
+                    }
+                })
+            }else{
+                //update-PUT
+                ajax({
+                    method:"PUT",
+                    url:`http://localhost:3000/santos/${e.target.id.value}`,
+                    success: (res)=>{
+                        location.reload();
+                    },
+                    error: (err)=>{
+                        $form.insertAdjacentHTML("afterend",`<p><b>${err}</b></p>`);
+                    },
+                    data:{
+                        nombre:e.target.nombre.value,
+                        constelacion:e.target.constelacion.value
+                    }
+                })
+            }
+        }
+    });
+
+    d.addEventListener("click",(e)=>{
+        if(e.target.matches('.edit')){
+            //alert("Presionaste el boton de editar");
+            $title.textContent = "Editar Santo";
+            $form.nombre.value = e.target.dataset.name;
+            $form.constelacion.value = e.target.dataset.constellation;
+            $form.id.value = e.target.dataset.id;
+        }
+        if(e.target.matches('.delete')){
+           let isDelete = confirm(`Esta seguro de eliminar el id ${e.target.dataset.id}?`);
+           if(isDelete){
+            ajax({
+                    method:"DELETE",
+                    url:`http://localhost:3000/santos/${e.target.dataset.id}`,
+                    success: (res)=>{
+                        location.reload();
+                    },
+                    error: (err)=>{
+                        alert(err);
+                    }
+                })
+           }
+        }
+    })
+
 </script>
 
 </body>
