--- a/AJAX/crud_axios.html
+++ b/AJAX/crud_axios.html
@@ -48,6 +48,8 @@
         </tr>
     </template>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 <script>
     const d = document,
     $table=d.querySelector(".crud-table"),
@@ -55,6 +57,108 @@
     $title = d.querySelector(".crud-title"),
     $template = d.getElementById("crud-template").content,
     $fragment = d.createDocumentFragment();
+
+    const getAll = async ()=>{
+        try{
+            let res = await axios.get("http://localhost:3000/santos"),//axios devuelve en formato json la data
+            json = await res.data;
+
+            json.forEach(el =>{
+                    $template.querySelector(".name").textContent = el.nombre;
+                    $template.querySelector(".constelacion").textContent = el.constelacion;
+                    $template.querySelector(".edit").dataset.id = el.id;
+                    $template.querySelector(".edit").dataset.name = el.nombre;
+                    $template.querySelector(".edit").dataset.constellation = el.constelacion;
+                    $template.querySelector(".delete").dataset.id = el.id;
+
+                    let $clone = d.importNode($template,true)//si lo quiero vacio es false
+                    $fragment.appendChild($clone);
+                });
+            $table.querySelector("tbody").appendChild($fragment);
+
+        }catch(err){
+            let message = erro.statusText || "Ocurrio un error";
+            $table.insertAdjacentHTML("afterend",`<p><b>ERROR ${err.status}:${message}</b></p>`);
+        }
+    }
+
+    d.addEventListener("DOMContentLoaded",getAll);
+
+    d.addEventListener("submit",async e=>{
+        if(e.target === $form){
+            e.preventDefault();
+            if(!e.target.id.value){
+                //Create - POST
+                try{
+                    let options = {
+                        method:"POST",
+                        headers:{
+                            "Content-type":"application/json; charset=utf-8"
+                        },
+                        data: JSON.stringify({
+                            nombre: e.target.nombre.value,
+                            constelacion:e.target.constelacion.value
+                        })
+                    },
+                    res = await axios("http://localhost:3000/santos",options),//axios devuelve en formato json la data
+                    json = await res.data;
+
+                    //console.log(res);
+
+                    location.reload();
+                }catch(err){
+                    let message = err.querySelector || "Ocurrio un error";
+                    $form.insertAdjacentHTML("afterend",`<p><b>ERROR ${err.status}:${message}</b></p>`);
+                }
+            }else{
+                //Update - PUT
+                try{
+                    let options = {
+                        method:"PUT",
+                        headers:{
+                            "Content-type":"application/json; charset=utf-8"
+                        },
+                        data: JSON.stringify({
+                            nombre: e.target.nombre.value,
+                            constelacion:e.target.constelacion.value
+                        })
+                    },
+                    res = await axios(`http://localhost:3000/santos/${e.target.id.value}`,options);//axios devuelve en formato json la data
+                    
+                    console.log(res);
+
+                    location.reload();
+
+                }catch(err){
+                    let message = err.querySelector || "Ocurrio un error";
+                    $form.insertAdjacentHTML("afterend",`<p><b>ERROR ${err.status}:${message}</b></p>`);
+                }
+            }
+
+        }
+    });
+
+    d.addEventListener("click",async (e)=>{
+        if(e.target.matches('.edit')){
+            //alert("Presionaste el boton de editar");
+            $title.textContent = "Editar Santo";
+            $form.nombre.value = e.target.dataset.name;
+            $form.constelacion.value = e.target.dataset.constellation;
+            $form.id.value = e.target.dataset.id;
+        }
+        if(e.target.matches('.delete')){
+           let isDelete = confirm(`Esta seguro de eliminar el id ${e.target.dataset.id}?`);
+           if(isDelete){
+            try{       
+                res = await axios.delete(`http://localhost:3000/santos/${e.target.dataset.id}`);//axios devuelve en formato json la data
+                location.reload();
+            }catch(err){
+                    let message = err.querySelector || "Ocurrio un error";
+                    alert(`ERROR ${err.status}:${message}`);
+                }
+           }
+        }
+    })
 
     
 
