--- a/AJAX-ejercicios/stripe-checkout.html
+++ b/AJAX-ejercicios/stripe-checkout.html
@@ -5,6 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        html{
+            box-sizing: border-box;
+            font-family: sans-serif;
+            font-size: 16px;
+        }
+        *,*:before,*:after{
+            box-sizing: inherit;
+        }
+        .productos{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .productos>*{
+            flex: 1 1 400px;/* factor de crecimiento - factor de reduccion - tamño del item */
+            margin: 1rem;
+        }
+        .product{
+            background: blue;
+            color: white;
+            font-size: 125%;
+            text-align: center;
+            cursor: pointer;
+            transition: all 0.3s ease-out;
+        }
+        .product:hover{
+            opacity: 9;
+            transform: scale(.9);
+        }
+        .product img{
+            max-width: 100%;
+            height: auto;
+        }
+        .product figcaption{
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
     <h1>Checkout con Stripe</h1>
