--- a/AJAX-ejercicios/wp-api-rest.html
+++ b/AJAX-ejercicios/wp-api-rest.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorPress REST API</title>
+    <style>
+        .loader{
+            display: none;
+            margin: 2rem auto;
+        }
+    </style>
 </head>
 <body>
     <h1>WordPress API REST</h1>
@@ -43,14 +49,16 @@
         $posts = d.getElementById("posts"),
         $loader = d.querySelector(".loader"),
         $fragment = d.createDocumentFragment(),
+        $template = d.getElementById("post-template").content,
         DOMAIN = "https://malvestida.com",
         SITE = `${DOMAIN}/wp-json`,
         API_WP = `${SITE}/wp/v2`,
-        POSTS = `${API_WP}/posts`,
+        POSTS = `${API_WP}/posts?_embed`,
         PAGES = `${API_WP}/pages`,
         CATEGORIES = `${API_WP}/categories`;
 
         function getSiteData(){
+            
             fetch(SITE)
             .then(res => res.ok? res.json() : Promise.reject(res))
             .then(json => {
@@ -72,10 +80,21 @@
         }
 
         function getPosts(){
+            $loader.style.display = 'block';
             fetch(POSTS)
             .then(res => res.ok? res.json() : Promise.reject(res))
             .then(json => {
-                console.log(json)
+                console.log(json);
+                json.forEach(el => {
+                    $template.querySelector(".post-title").innerHTML = el.title.rendered;
+                    $template.querySelector(".post-image").src = el._embedded["wp:featuredmedia"][0].source_url;
+
+                    let $clone = d.importNode($template,true);
+                    $fragment.appendChild($clone);
+                });
+
+                $posts.appendChild($fragment);
+                $loader.style.display = 'none';
             })
             .catch(err => {
                 console.warn(err);
