--- a/SPA/index.html
+++ b/SPA/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="app/assets/favicon.png">
 </head>
 <body>
-    <main id="root"> 
-    </main>
+    <div id="root"> 
+    </div>
     <script src="app/index.js" type="module"></script>
 </body>
 </html>
